--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -833,7 +833,7 @@ orbs:
         resource_class: small
       node-browsers:
         docker:
-          - image: cimg/18.11.0-browsers
+          - image: cimg/node:18.11.0-browsers
             auth:
               username: $DOCKER_USER
               password: $DOCKER_ACCESS_TOKEN
