--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -919,7 +919,7 @@ orbs:
           - run:
               name: Build assets
               command: |
-                cd service-front/web/ && npm run build && npm run build:pdf_production
+                cd service-front/web/ && npm run build
           - save_cache:
               name: Save node modules cache
               key: node_modules-{{ checksum "service-front/web/package-lock.json" }}-{{ arch }}
