--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -43,6 +43,8 @@ server {
     add_header X-Frame-Options "deny";
     add_header X-Content-Type-Options "nosniff";
     add_header Strict-Transport-Security "max-age=3600; includeSubDomains";
+    add_header Referrer-Policy "strict-origin";
+    add_header Referrer-Policy "no-referrer";
 
     location / {
         root    /web;
