final retest of dependabot workflows

--- a/.github/workflows/dependabot-composer-npm-path.yml
+++ b/.github/workflows/dependabot-composer-npm-path.yml
@@ -12,6 +12,7 @@ on:
     branches:
       - 'dependabot/npm_and_yarn/**'
       - 'dependabot/composer/**'
+      - 'UML-2559**'
 
 permissions:
   contents: read
