--- a/service-api/docker/app/Dockerfile
+++ b/service-api/docker/app/Dockerfile
@@ -1,13 +1,13 @@
 #
 # Base image containing correct PHP, extensions and configuration
 #
-FROM php:8.1-fpm-alpine3.15 AS php-base
+FROM php:8.1-fpm-alpine3.16 AS php-base
 
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 
 RUN set -xe \
   && apk add --update --no-cache fcgi \
-  && apk upgrade --update --no-cache curl \
+  && apk upgrade --update --no-cache curl libxml2 \
   && install-php-extensions apcu \
   && rm /usr/bin/install-php-extensions
 
