--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,7 +216,8 @@ orbs:
                 sudo ln -sf /usr/bin/python3-config python-config
       dockerhub_login:
         steps:
-          - docker/install-docker-credential-helper
+          - docker/install-docker-credential-helper:
+              release-tag: v0.6.4
           - docker/check:
               docker-password: DOCKER_ACCESS_TOKEN
               docker-username: DOCKER_USER
@@ -377,7 +378,6 @@ orbs:
           - checkout
           - install_aws_cli
           - setup_remote_docker:
-              version: 20.10.11
               docker_layer_caching: false
           - attach_workspace:
               at: ~/project
@@ -455,7 +455,6 @@ orbs:
           - checkout
           - install_aws_cli
           - setup_remote_docker:
-              version: 20.10.11
               docker_layer_caching: false
           - attach_workspace:
               at: ~/project
@@ -499,7 +498,6 @@ orbs:
           - checkout
           - install_aws_cli
           - setup_remote_docker:
-              version: 20.10.11
               docker_layer_caching: false
           - dockerhub_login
           - run:
@@ -583,7 +581,6 @@ orbs:
           - checkout
           - install_aws_cli
           - setup_remote_docker:
-              version: 20.10.11
               docker_layer_caching: false
           - dockerhub_login
           - run:
@@ -639,7 +636,6 @@ orbs:
           - checkout
           - install_aws_cli
           - setup_remote_docker:
-              version: 20.10.11
               docker_layer_caching: false
           - dockerhub_login
           - run:
