update to work with ie11

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: .
       dockerfile: service-front/web/Dockerfile
     entrypoint: >
-      sh -c "npm ci --verbose && npm run build-scss --verbose && node build.js"
+      sh -c "npm ci --verbose && npm run build"
     volumes:
       - ./service-front/web:/web:rw,delegated
       - webpack_dist:/web/dist
