--- a/service-front/web/package.json
+++ b/service-front/web/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "CI=true jest --coverage",
     "test:watch": "jest --watch",
-    "build": "npm run build-scss && node build.js && babel dist/index.js -o dist/indexES5.js",
+    "build": "npm run build-scss && babel src --out-dir dist && node build.js",
     "watch": "webpack --progress --watch --config webpack.development.js",
     "accessibility-check": "node ./pa11y.js",
     "build-scss": "npm rebuild sass --verbose && sass --verbose src/main.scss:dist/stylesheets/main.css src/gds.scss:dist/stylesheets/gds.css src/pdf.scss:dist/pdf.css"
@@ -23,8 +23,10 @@
     "@babel/plugin-transform-reserved-words": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
+    "@babel/runtime-corejs3": "^7.19.6",
     "@testing-library/dom": "^8.18.1",
     "@testing-library/jest-dom": "^5.16.4",
+    "core-js": "^3.26.0",
     "coveralls": "^3.1.1",
     "es6-promise": "^4.2.8",
     "esbuild": "^0.15.10",
