--- a/service-front/web/babel.config.json
+++ b/service-front/web/babel.config.json
@@ -1,28 +1,36 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "ie": "11",
-          "esmodules": true 
-        },
-        "useBuiltIns": "usage",
-        "debug": true,
-        "corejs": 3,
-        "modules": false
+  "env": {
+    "build": {
+      "sourceType": "module",
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "ie": "11",
+              "esmodules": true 
+            },
+            "useBuiltIns": "usage",
+            "debug": true,
+            "corejs": 3,
+            "modules": false
+          }
+        ]
+      ],
+      "plugins": [
+        [
+          "@babel/plugin-transform-runtime",
+          {
+            "regenerator": true
+          }
+        ],
+        "@babel/plugin-transform-reserved-words",
+        "@babel/plugin-transform-member-expression-literals",
+        "@babel/plugin-transform-property-literals"
+      ]
+    },
+    "test": {
+        "plugins": ["@babel/plugin-transform-modules-commonjs"]
       }
-    ]
-  ],
-  "plugins": [
-    [
-      "@babel/plugin-transform-runtime",
-      {
-        "regenerator": true
-      }
-    ],
-    "@babel/plugin-transform-reserved-words",
-    "@babel/plugin-transform-member-expression-literals",
-    "@babel/plugin-transform-property-literals"
-  ]
-}
+    }
+  }
