--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,15 +8,9 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
-    versioning-strategy: lockfile-only
-
-  # Enable version updates for service-pdf npm
-  - package-ecosystem: "npm"
-    directory: "/service-pdf/app"
-    schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch"]
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-front composer
@@ -26,6 +20,11 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
+      - dependency-name: "aws/aws-sdk-php"
+        update-types: [ "version-update:semver-minor" ]
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-api composer
@@ -35,6 +34,11 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
+      - dependency-name: "aws/aws-sdk-php"
+        update-types: [ "version-update:semver-minor" ]
     versioning-strategy: lockfile-only
 
     # Enable version updates for smoke tests composer
@@ -44,6 +48,9 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
     versioning-strategy: lockfile-only
 
     # Enable version updates for account terraform
@@ -53,6 +60,9 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
 
     # Enable version updates for environment terraform
   - package-ecosystem: "terraform"
@@ -61,6 +71,9 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
 
     # Enable version updates for service-admin gomod
   - package-ecosystem: "gomod"
@@ -69,6 +82,11 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
+      - dependency-name: "github.com/aws/aws-sdk-go-v2/*"
+        update-types: [ "version-update:semver-minor" ]
 
     # Enable version updates for service-admin docker
   - package-ecosystem: "docker"
@@ -77,3 +95,6 @@ updates:
       interval: "daily"
       time: "09:00"
       timezone: "Europe/London"
+    ignore:
+      - dependency-name: "*"
+        update-types: [ "version-update:semver-patch" ]
