UML-2561 create path to live in GH actions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,144 +3,10 @@ version: 2.1
 workflows:
   path_to_live:
       jobs:
-        # Common tasks
-        - use-my-lpa/node_test_web:
-            name: test_web
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/node_build_web:
-            name: build_web
-            filters: { branches: { only: [main] } }
-            requires: [test_web]
-
-        - use-my-lpa/docker_build_front_app:
-            name: app_front_build
-            filters: { branches: { only: [main] } }
-            requires: [build_web]
-
-        - use-my-lpa/docker_build_front_web:
-            name: web_front_build
-            filters: { branches: { only: [main] } }
-            requires: [build_web]
-
-        - use-my-lpa/docker_build_api_app:
-            name: app_api_build
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/docker_build_api_web:
-            name: web_api_build
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/docker_test_admin:
-            name: admin_app_test
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/docker_build_admin:
-            name: admin_app_build
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/docker_build_lambdas:
-            name: lambda_build
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/codecov_upload:
-            name: codecov_upload
-            filters: { branches: { only: [main] } }
-            requires:
-              [
-                app_front_build,
-                app_api_build,
-                test_web,
-                admin_app_test,
-              ]
-
-        # Provision and test preproduction
-        - use-my-lpa/apply_shared_terraform:
-            name: dev_apply_shared_terraform
-            workspace: development
-            filters: { branches: { only: [main] } }
-
-        - use-my-lpa/apply_shared_terraform:
-            name: preprod_apply_shared_terraform
-            workspace: preproduction
-            filters: { branches: { only: [main] } }
-            requires:
-              [
-                dev_apply_shared_terraform,
-              ]
-
-        - use-my-lpa/apply_environment_terraform:
-            name: preprod_apply_environment_terraform
-            workspace: preproduction
-            filters: { branches: { only: [main] } }
-            requires:
-              [
-                preprod_apply_shared_terraform,
-                app_front_build,
-                web_front_build,
-                web_api_build,
-                app_api_build,
-                admin_app_build,
-                lambda_build,
-              ]
-
-        - ecr_scan_results:
-            name: ecr_scan_results
-            filters: { branches: { only: [main] } }
-            requires:
-              [
-                app_front_build,
-                web_front_build,
-                web_api_build,
-                app_api_build,
-                admin_app_build,
-                preprod_apply_environment_terraform,
-              ]
-
-        - use-my-lpa/seed_database:
-            name: preprod_seed_database
-            filters: { branches: { only: [main] } }
-            requires: [preprod_apply_environment_terraform]
-
-        - use-my-lpa/run_behat_suite:
-            name: preprod_run_behat_tests
-            workspace: preproduction
-            filters: { branches: { only: [main] } }
-            requires: [preprod_seed_database]
-
-        # Provision and test production
-        - use-my-lpa/apply_shared_terraform:
-            name: production_apply_shared_terraform
-            workspace: production
-            filters: { branches: { only: [main] } }
-            requires: [preprod_run_behat_tests]
-
-        - use-my-lpa/apply_environment_terraform:
-            name: production_apply_environment_terraform
-            workspace: production
-            filters: { branches: { only: [main] } }
-            requires:
-              [
-                production_apply_shared_terraform,
-                app_front_build,
-                web_front_build,
-                web_api_build,
-                app_api_build,
-                admin_app_build,
-              ]
-
+        # Just need a task in here for this PR until we remove the config entirely
         - use-my-lpa/run_healthcheck_test:
-            name: prod_run_healthcheck_test
-            filters: { branches: { only: [main] } }
-            requires: [production_apply_environment_terraform]
-
-        - python_templated_slack_notify:
-            name: post_production_release_message
-            template: production_release.txt
-            webhook: $PROD_RELEASE_SLACK_WEBHOOK
-            filters: { branches: { only: [main] } }
-            requires: [prod_run_healthcheck_test]
-
+            name: stub task
+            filters: { branches: { only: [non_existent_branch] } }
 
 orbs:
   slack: circleci/slack@3.3.0
