--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -66,9 +66,11 @@
         "phpspec/prophecy": "^1.15",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5",
+        "psalm/plugin-phpunit": "^0.17.0",
         "roave/security-advisories": "dev-master",
         "slevomat/coding-standard": "^8.0",
         "smart-gamma/pact-behat-extension": "^3.0",
+        "slevomat/coding-standard": "^8.0",
         "squizlabs/php_codesniffer": "^3.0",
         "vimeo/psalm": "^4.19",
         "webimpress/coding-standard": "^1.0"
