--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -7,7 +7,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "laminas/laminas-component-installer": false
+            "laminas/laminas-component-installer": false,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "extra": {
@@ -66,9 +67,11 @@
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-master",
+        "slevomat/coding-standard": "^8.0",
         "smart-gamma/pact-behat-extension": "^3.0",
         "squizlabs/php_codesniffer": "^3.0",
-        "vimeo/psalm": "^4.19"
+        "vimeo/psalm": "^4.19",
+        "webimpress/coding-standard": "^1.0"
     },
     "autoload": {
         "psr-4": {
