--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -69,7 +69,6 @@ jobs:
           SPECIFIC_PATH: ${{ steps.variables.outputs.path }}
         run: |
           echo "path chosen - $SPECIFIC_PATH"
-          blah
 
   terraform_lint:
     name: lint terraform code
@@ -81,8 +80,7 @@ jobs:
     secrets: inherit
     if: |
       always() &&
-      needs.workflow_variables.result == 'success' &&
-      needs.workflow_variables.outputs.specific_path != 'admin'
+      needs.workflow_variables.result == 'success'
 
   node_test:
     name: test node dependencies
@@ -135,8 +133,7 @@ jobs:
     secrets: inherit
     if: |
       always() &&
-      (needs.terraform_lint.result == 'success' || needs.terraform_lint.result == 'skipped') &&
-      needs.workflow_variables.outputs.specific_path != 'admin'
+      needs.terraform_lint.result == 'success'
 
   terraform_apply_environment:
     name: terraform apply environment
@@ -155,7 +152,7 @@ jobs:
     secrets: inherit
     if: |
       always() &&
-      (needs.terraform_lint.result == 'success' || needs.terraform_lint.result == 'skipped') &&
+      needs.terraform_lint.result == 'success' &&
       needs.docker_build_scan_push.result == 'success' &&
       needs.workflow_variables.result == 'success'
 
@@ -168,8 +165,8 @@ jobs:
     secrets: inherit
     if: |
       always() &&
-      (needs.terraform_apply_environment.result == 'success' || needs.terraform_apply_environment.result == 'skipped') &&
-      (needs.terraform_plan_shared_development.result == 'success' || needs.terraform_plan_shared_development.result == 'skipped')
+      needs.terraform_apply_environment.result == 'success' &&
+      needs.terraform_plan_shared_development.result == 'success'
 
   run_behat_suite:
     name: run behat tests against environment
@@ -192,10 +189,12 @@ jobs:
       - run_behat_suite
     with:
       template: successful_dev_build.txt
-      success: ${{ needs.run_behat_suite.result }}
+      workflow_status: ${{ needs.run_behat_suite.result }}
     secrets:
       webhook: ${{ secrets.DEV_SLACK_WEB_HOOK }}
-    if: always()
+    if: |
+      always() &&
+      needs.run_behat_suite.result == 'success'
 
   code_coverage:
     name: upload to code coverage
