--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -205,6 +205,7 @@ jobs:
     needs:
       - docker_build_scan_push
       - workflow_variables
+    secrets: inherit
     if: |
       always() &&
       needs.docker_build_scan_push.result == 'success'
