--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ scripts/getStatsResultDemo.json
 .pytest_cache
 .coverage
 .phpunit.result.cache
+.phpcs-cache
 scripts/analysis_scripts/*.csv
 
 query/s3_objects/**
