Cache static assets for 30 days

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -60,6 +60,13 @@ server {
         root   /usr/share/nginx/html;
     }
 
+    # Cache static assets for 30 days
+    #
+    location ~* \.(css|jpg|js|png|ico|jpeg)$ {
+        access_log off;
+        expires 30d;
+    }
+
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
