--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -63,8 +63,11 @@ server {
     # Cache static assets for 30 days
     #
     location ~* \.(css|jpg|js|png|ico|jpeg)$ {
-        access_log off;
         expires 30d;
+        access_log off;
+        etag off;
+        if_modified_since off;
+        add_header Cache-Control "public, no-transform";
     }
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
