--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -44,6 +44,7 @@ server {
     add_header X-Content-Type-Options "nosniff";
     add_header Strict-Transport-Security "max-age=3600; includeSubDomains";
     add_header Referrer-Policy "same-origin";
+    #add_header 'Access-Control-Allow-Origin' '*';
 
     location / {
         root    /web;
@@ -55,6 +56,18 @@ server {
             access_log off;
         }
         try_files $uri /index.php$is_args$args;
+
+        set $cors '';
+        if ($http_origin ~ '^https?://(localhost|www\.gov\.uk|www\.use-lasting-power-of-attorney.service.gov.uk|www\.view-lasting-power-of-attorney.service.gov.uk\)') {
+                set $cors 'true';
+        }
+    }
+
+
+    if ($cors = 'true') {
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
     }
 
     # serve noindex, nofollow meta tag on each page so that search engines do not index this domain
