Move caching in nginx to correct place

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -47,6 +47,13 @@ server {
 
     location / {
         root    /web;
+
+        # cache static assets for 90 days
+        #
+        location ~* \.(css|jpg|js|png|ico|jpeg|woff2|woff)$ {
+            expires 90d;
+            access_log off;
+        }
         try_files $uri /index.php$is_args$args;
     }
 
@@ -58,13 +65,6 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
-    }
-
-    # Cache static assets for 30 days
-    #
-    location ~* \.(css|jpg|js|png|ico|jpeg)$ {
-        expires 30d;
-        access_log off;
     }
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
