pin alpine version to 3.17 and upgraded some packages

--- a/service-admin/Dockerfile
+++ b/service-admin/Dockerfile
@@ -24,7 +24,7 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o admin cmd/admin/main.go
 
 # Bundle all
-FROM alpine:3 as production
+FROM alpine:3.17 as production
 
 WORKDIR /go/bin
 
@@ -32,6 +32,8 @@ RUN apk --update --no-cache add \
   ca-certificates \
   tzdata \
   && rm -rf /var/cache/apk/*
+
+RUN apk upgrade libcrypto3 libssl3
 
 COPY --from=build-env /app/admin admin
 COPY --from=build-env /app/web/templates web/templates
