UML-2781 cache assets (#2139)
* Cache static assets for 90 days

* Move script tag to head and add async. Add preload tag

* Set PHP asset version to container version

* Add budget.json

* Add additional headers to static assets

* Fix README layout

* Add preconnect for google assets

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -47,6 +47,13 @@ server {
 
     location / {
         root    /web;
+
+        # cache static assets for 90 days
+        #
+        location ~* \.(css|jpg|js|png|ico|jpeg|woff2|woff)$ {
+            expires 90d;
+            access_log off;
+        }
         try_files $uri /index.php$is_args$args;
     }
 
