UML-2727 add api 5xx alarms

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -14,6 +14,7 @@ log_format json_combined escape=json
         '"request_time":"$request_time",'
         '"http_referrer":"$http_referer",'
         '"http_user_agent":"$http_user_agent",'
+        '"service_name": "front",'
         '"request_id":"$trace_id"'
     '}';
 
