--- a/service-front/docker/app/fpm-pool.ini
+++ b/service-front/docker/app/fpm-pool.ini
@@ -20,7 +20,8 @@
 ;   "request_memory": "23.2M"
 ;   "http_referrer": "-",
 ;   "http_user_agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36",
+;   "service_name": "front",
 ;   "request_id": "98bb9fbfb3bc710422d87b22d380a4e6"
 ; }
-access.format = '{"time_local":"%{%Y-%m-%dT%H:%M:%S%z}T","client_ip":"%{HTTP_X_FORWARDED_FOR}e","remote_addr":"%R","remote_user":"%u","request":"%m %{REQUEST_URI}e %{SERVER_PROTOCOL}e","status":"%s","body_bytes_sent":"%l","request_time":"%d","request_memory":"%{mega}M","http_referrer":"%{HTTP_REFERER}e","http_user_agent":"%{HTTP_USER_AGENT}e","request_id":"%{HTTP_X_AMZN_TRACE_ID}e"}'
+access.format = '{"time_local":"%{%Y-%m-%dT%H:%M:%S%z}T","client_ip":"%{HTTP_X_FORWARDED_FOR}e","remote_addr":"%R","remote_user":"%u","request":"%m %{REQUEST_URI}e %{SERVER_PROTOCOL}e","status":"%s","body_bytes_sent":"%l","request_time":"%d","request_memory":"%{mega}M","http_referrer":"%{HTTP_REFERER}e","http_user_agent":"%{HTTP_USER_AGENT}e","service_name":"front","request_id":"%{HTTP_X_AMZN_TRACE_ID}e"}'
 ping.path = /ping
