Implement CSP on nginx responses and provide logging endpoint

--- a/service-front/docker/web/Dockerfile
+++ b/service-front/docker/web/Dockerfile
@@ -21,6 +21,8 @@ RUN apk --no-cache add libcap && \
     setcap 'cap_net_bind_service=+ep' /usr/sbin/nginx && \
     apk del libcap
 
+RUN ln -sf /dev/stdout /var/log/nginx/csp.log
+
 COPY scripts/docker_hardening/harden-nginx.sh /harden-nginx.sh
 RUN /harden-nginx.sh && rm /harden-nginx.sh
 
