--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -1,9 +1,6 @@
-log_format tracing   '$trace_id - [$time_local] "$request" '
-                     '$status $body_bytes_sent "$http_referer" '
-                     '"$http_user_agent" "$http_x_forwarded_for"';
-
 log_format json_combined escape=json
     '{'
+        '"type":"request",'
         '"time_local":"$time_iso8601",'
         '"client_ip":"$http_x_forwarded_for",'
         '"remote_addr":"$remote_addr",'
@@ -14,6 +11,23 @@ log_format json_combined escape=json
         '"request_time":"$request_time",'
         '"http_referrer":"$http_referer",'
         '"http_user_agent":"$http_user_agent",'
+        '"request_id":"$trace_id"'
+    '}';
+
+log_format CSP escape=json
+    '{'
+        '"type":"csp_report",'
+        '"time_local":"$time_iso8601",'
+        '"client_ip":"$http_x_forwarded_for",'
+        '"remote_addr":"$remote_addr",'
+        '"remote_user":"$remote_user",'
+        '"request":"$request",'
+        '"status":"$status",'
+        '"body_bytes_sent":"$body_bytes_sent",'
+        '"request_time":"$request_time",'
+        '"http_referrer":"$http_referer",'
+        '"http_user_agent":"$http_user_agent",'
+        '"request_body": "$request_body"'
         '"request_id":"$trace_id"'
     '}';
 
@@ -45,6 +59,18 @@ server {
     add_header Strict-Transport-Security "max-age=3600; includeSubDomains";
     add_header Referrer-Policy "same-origin";
 
+    # serve noindex, nofollow meta tag on each page so that search engines do not index this domain
+    add_header X-Robots-Tag "noindex, nofollow" always;
+
+    set $CSP_image   "img-src     'self' data:;";
+    set $CSP_script  "script-src  'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com;";
+    set $CSP_style   "style-src   'self' 'unsafe-inline';";
+    set $CSP_font    "font-src    'self';";
+    set $CSP_connect "connect-src https://www.google-analytics.com;";
+    set $CSP         "default-src 'none'; ${CSP_image} ${CSP_script} ${CSP_style} ${CSP_connect} ${CSP_font}";
+
+    add_header Content-Security-Policy-Report-Only "${CSP} report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
+
     location / {
         root    /web;
 
@@ -57,8 +83,10 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    # serve noindex, nofollow meta tag on each page so that search engines do not index this domain
-    add_header X-Robots-Tag "noindex, nofollow" always;
+    location /_csp {
+        access_log /var/log/nginx/csp.log CSP;
+        proxy_pass http://127.0.0.1:8080/_csp_response;
+    }
 
     # redirect server error pages to the static page /50x.html
     #
@@ -94,4 +122,16 @@ server {
 
     # Comply with https://ministryofjustice.github.io/security-guidance/contact/implement-security-txt/#implementing-securitytxt
     rewrite ^/.well-known/security.txt$ https://security-guidance.service.justice.gov.uk/.well-known/security.txt permanent;
+}
+
+# this block is needed, along with the /_csp location defined above, to allow the
+# content of the requet body to be logged AND the response to be a 204. #JustNginxThings
+server {
+    listen       8080 default_server;
+    server_name  _;
+
+    location /_csp_response {
+        access_log off;
+        return 204;
+    }
 }
