--- a/service-front/docker/web/etc/confd/conf.d/nginx.toml
+++ b/service-front/docker/web/etc/confd/conf.d/nginx.toml
@@ -1,4 +1,4 @@
 [template]
 src  = "nginx.conf"
 dest = "/etc/nginx/conf.d/default.conf"
-keys = ["/app/host", "/app/port", "/nginx/log/level"]
+keys = ["/web/domain", "/app/host", "/app/port", "/nginx/log/level"]
