--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -66,7 +66,7 @@ server {
     set $CSP_script  "script-src  'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com;";
     set $CSP_style   "style-src   'self' 'unsafe-inline';";
     set $CSP_font    "font-src    'self';";
-    set $CSP_connect "connect-src https://www.google-analytics.com;";
+    set $CSP_connect "connect-src 'none';";
     set $CSP         "default-src 'none'; ${CSP_image} ${CSP_script} ${CSP_style} ${CSP_connect} ${CSP_font}";
 
     add_header Content-Security-Policy-Report-Only "${CSP} report-uri {{ getv "/web/domain" "http://localhost" }}/_csp";
