Forgot comma in log format

--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -27,7 +27,7 @@ log_format CSP escape=json
         '"request_time":"$request_time",'
         '"http_referrer":"$http_referer",'
         '"http_user_agent":"$http_user_agent",'
-        '"request_body": "$request_body"'
+        '"request_body": "$request_body",'
         '"request_id":"$trace_id"'
     '}';
 
