--- a/service-front/docker/web/etc/confd/templates/nginx.conf
+++ b/service-front/docker/web/etc/confd/templates/nginx.conf
@@ -14,7 +14,9 @@ log_format json_combined escape=json
         '"request_time":"$request_time",'
         '"http_referrer":"$http_referer",'
         '"http_user_agent":"$http_user_agent",'
-        '"request_id":"$trace_id"'
+        '"request_id":"$trace_id",'
+        '"http_host":"$http_host",'
+        '"http_origin": "$http_origin"'
     '}';
 
 # ensures that the trace id always has a value, used mostly for
@@ -22,6 +24,16 @@ log_format json_combined escape=json
 map $http_x_amzn_trace_id $trace_id {
     "~*Root=" $http_x_amzn_trace_id;
     default "Root=1-$msec-$connection$connection_requests";
+}
+
+map $http_host $cors_origin_header {
+    default "";
+    "~localhost:9002" "$http_host";
+    "~^https://use-lasting-power-of-attorney.service.gov.uk" "$http_origin";
+    "~^https://view-lasting-power-of-attorney.service.gov.uk" "$http_origin";
+   #not getting regex to work
+   # "~(^http:\/\/)(localhost:[0-9]{1,4})|(localhost:[0-9]{1,4})" "$http_host";
+   # "~^https://"{{ getv "/app/port" }} "$http_origin";
 }
 
 server {
@@ -45,6 +57,11 @@ server {
     add_header Strict-Transport-Security "max-age=3600; includeSubDomains";
     add_header Referrer-Policy "same-origin";
 
+    add_header Access-Control-Allow-Origin $cors_origin_header always;
+    add_header Access-Control-Allow-Credentials 'true' always;
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, HEAD";
+    add_header Access-Control-Allow-Headers "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+
     location / {
         root    /web;
 
@@ -58,15 +75,8 @@ server {
 
         #set $cors '';
         #if ($http_origin ~ '^https?://(localhost|www\.gov\.uk|www\.use-lasting-power-of-attorney.service.gov.uk|www\.view-lasting-power-of-attorney.service.gov.uk\)') {
-                set $cors 'true';
+        #       set $cors 'true';
         #}
-    }
-
-
-    if ($cors = 'true') {
-        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, HEAD, OPTIONS' always;
     }
 
     # serve noindex, nofollow meta tag on each page so that search engines do not index this domain
